translation-tool/inputs/source_meta/objects/Common_DSS_Payload_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Node__c</fullName>
        <label>Parent Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Common_DSS_Payload_Mapping</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>NAME</columns>
        <columns>Field_API_Name__c</columns>
        <columns>isEnabled__c</columns>
        <columns>Object_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>